--- a/public/albums/1.html
+++ b/public/albums/1.html
@@ -56,6 +56,7 @@
               </tr>
             </tbody>
         </table>
+        <a href="../index.html">← Back to all albums</a>
     </p>
 
 <!-- Optional JavaScript -->
