--- a/public/albums/1.html
+++ b/public/albums/1.html
@@ -31,11 +31,12 @@
 </head>
 
 <body>
-    <h1>Album Title
+    <h1 id="album-title">
+        <span id="album-title-text">Album Title</span>
         <aside>
-            <img src="../images/Animal.jpg" alt="Animal Album Cover" class="album-img">
+          <img src="../images/Animal.jpg" class="album-img" alt="Animal Album Cover">
         </aside>
-    </h1>
+      </h1>
     <p>Album | Year | Song Count <code><aside></code>
         <table class="table table-dark">
             <tbody>
@@ -64,6 +65,21 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', async () => {
+            const res = await fetch('/data/albums');
+            const { albums } = await res.json();
+            if (albums.length > 0) {
+                document
+                .getElementById('album-title-text')
+                .textContent = albums[0].title;
+            }
+        });
+
+
+      </script>
+      
 </body>
 
 </html>
