--- a/public/albums/1.html
+++ b/public/albums/1.html
@@ -23,6 +23,10 @@
             float: left;
         }
 
+        aside .meta-item {
+            font-size: 18px;
+        }
+
         .album-img {
             width: 250px;
             height: 250px;
