--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <!-- Image Section -->
     <section class="bg-dark">
-        <div class="contianer-fluid p-0">
+        <div class="container-fluid p-0">
             <img src="images/kesha1.jpg" class="img-fluid w-100" alt="Banner">
         </div>
     </section>
@@ -31,32 +31,32 @@
           <div class="row justify-content-center">
             <!-- Repeat this block for each of your 6 images -->
             <div class="col-6 col-md-4 mb-4 text-center">
-                <a href="albums/1.html">
+                <a href="/1.html">
                     <img src="images/Animal.jpg" class="img-fluid album-img" alt="Album 1">
                 </a>
             </div>
             <div class="col-6 col-md-4 mb-4 text-center">
-                <a href="albums/2.html">
+                <a href="2.html">
                     <img src="images/Warrior.jpeg" class="img-fluid album-img" alt="Album 2">
                 </a>
             </div>
             <div class="col-6 col-md-4 mb-4 text-center">
-                <a href="albums/3.html">
-                    <img src="images/Highroad.png" class="img-fluid album-img" alt="Album 3">
-                </a>
-            </div>
-            <div class="col-6 col-md-4 mb-4 text-center">
-                <a href="albums/4.html">
+                <a href="3.html">
                     <img src="images/Rainbow.png" class="img-fluid album-img" alt="Album 4">
                 </a>
             </div>
             <div class="col-6 col-md-4 mb-4 text-center">
-                <a href="albums/5.html">
+                <a href="4.html">
+                    <img src="images/Highroad.png" class="img-fluid album-img" alt="Album 3">
+                </a>
+            </div>
+            <div class="col-6 col-md-4 mb-4 text-center">
+                <a href="5.html">
                     <img src="images/Gagorder.png" class="img-fluid album-img" alt="Album 5">
                 </a>
             </div>
             <div class="col-6 col-md-4 mb-4 text-center">
-                <a href="albums/6.html">
+                <a href="6.html">
                     <img src="images/Period.png" class="img-fluid album-img" alt="Album 6">
                 </a>
             </div>
