--- a/public/1.html
+++ b/public/1.html
@@ -40,6 +40,24 @@
             content: "|";
             margin-right: 0.5rem;
         }
+
+        @media (max-width: 767.98px) {
+        aside {
+            float: none !important;
+            width: 100% !important;
+            margin: 0 0 1rem 0;
+        }
+        .album-img {
+            width: 100%;
+            max-width: 250px; /* or whatever max you like */
+            height: auto;
+        }
+        .metadata, .metadata .meta-item {
+            display: block;
+            width: 100%;
+            margin-bottom: 0.5rem;
+        }
+    }
     </style>
 </head>
 
