--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,41 @@
   </head>
   <body>
     <!-- 1) thick black bar -->
-    <section class="header">
-        <h1>KESHA API</h1>
-    </section>
+    <section class="header navbar navbar-expand-md navbar-dark navbar-black">
+        <div class="container">
+          <a class="navbar-brand" href="#">KESHA API</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#mainNav"
+            aria-controls="mainNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="mainNav">
+            <ul class="navbar-nav ml-auto align-items-center">
+              <li class="nav-item mr-2">
+                <a href="/login" class="btn btn-outline-light btn-sm">Log In</a>
+              </li>
+              <li class="nav-item mr-3">
+                <a href="/logout" class="btn btn-outline-light btn-sm">Log Out</a>
+              </li>
+              <li class="nav-item">
+                <a href="/favorites" class="nav-link p-0">
+                  <!-- heart placeholder -->
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                       xmlns="http://www.w3.org/2000/svg">
+                    <rect width="24" height="24" fill="#fff"/>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
     <!-- Image Section -->
     <section class="bg-dark">
