--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,9 @@
               <li class="nav-item">
                 <a href="/favorites" class="nav-link p-0">
                   <!-- heart placeholder -->
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                       xmlns="http://www.w3.org/2000/svg">
-                    <rect width="24" height="24" fill="#fff"/>
-                  </svg>
+                  <a href="/1.html">
+                    <img src="images/heart.png" class="img-fluid icon-img" alt="Heart Button">
+                    </a>
                 </a>
               </li>
             </ul>
