--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,9 @@
     <title>Kesha API</title>
   </head>
   <body>
-    <!-- 1) thick black bar -->
     <section class="header navbar navbar-expand-md navbar-dark navbar-black">
         <div class="container">
-          <a class="navbar-brand" href="#">KESHA API</a>
+          <a class="navbar-brand" href="#">KE$HA API</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -38,7 +37,6 @@
               </li>
               <li class="nav-item">
                 <a href="/favorites" class="nav-link p-0">
-                  <!-- heart placeholder -->
                   <a href="/1.html">
                     <img src="images/heart.png" class="img-fluid icon-img" alt="Heart Button">
                     </a>
